Fixing spacing on banner for NursingCE and adding Line image

--- a/css/monica-lin.css
+++ b/css/monica-lin.css
@@ -1689,6 +1689,10 @@
   align-items: flex-end;
 }
 
+.nursingce-banner {
+  margin-top: 50px;
+}
+
 .heading-32 {
   margin-top: 60px;
   margin-bottom: 60px;
